src/app/layouts/auth-layout/auth-layout.scss
.auth-wrapper {
  height: 100%;
}

.auth-shell {
  height: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background: #f6f7f8;
  overflow-y: auto;
  position: relative;
}

.auth-top {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 15px 48px;
}

.logo {
  font-weight: 800;
  letter-spacing: 1px;
  opacity: 0;
  animation: showImg 0.6s ease forwards;
  animation-delay: 2.2s;
}

.logoAnimation {
  background-image: url(../../../../public/assets/img/Capa-1.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 273.9997558594px;
  height: 334.0722961426px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(1);
  z-index: 10;
  animation: 
    moveFade 1s ease forwards 1s,
    hideLogo 0.4s ease forwards 2s;
}

.top-right {
  display: flex;
  align-items: center;
  gap: 12px;
  color: #2a3647;
  opacity: 0;
  animation: showImg 0.6s ease forwards;
  animation-delay: 2.2s;
}

.top-right-mobil{
  display: none;
}

.auth-main {
    flex: 1;
    display: flex;
    place-items: center;
    justify-content: center;
    flex-direction: column;
    overflow-y: auto;
    overflow-x: hidden;
    opacity: 0;
    animation: showImg 0.6s ease forwards;
    animation-delay: 2.2s;
}

.auth-footer {
  display: flex;
  justify-content: center;
  gap: 24px;
  padding: 20px 12px;
  opacity: 0.65;
  font-size: 14px;
  opacity: 0;
  animation: showImg 0.6s ease forwards;
  animation-delay: 2.2s;
}

.auth-footer a {
  text-decoration: none;
  color: #A8A8A8;
  font-size: 16px;
  display: inline-flex;
  flex-direction: column;
  align-items: center;

  &::after {
    content: attr(data-text);
    font-weight: 700;
    height: 0;
    overflow: hidden;
    visibility: hidden;
    pointer-events: none;
    white-space: nowrap;
  }

  &:hover {
    color: #29ABE2;
    font-weight: 700;
  }
}

.btn {
  border: unset;
  cursor: pointer;
  border-radius: 8px;
  padding: 10px 14px;
  transition: 100ms;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
}
.btn-dark {
  background: #2a3647;
  color: #fff;
  transition: 100ms ease-in-out;
}
.btn-dark:hover {
  background: #29abe2;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
}


@media screen and (max-width:991px) {
  .top-right{
    display:none
  }
  .top-right-mobil{
  display: flex;
  margin-top: 20px;
}

img {
   width: 64px;
  height: 80px;
}
}

@media (max-width: 400px){
  img {
   width: 42px;
  height: 54px;
}
}
@media (max-width: 380px){
  .auth-footer{
    padding: 10px 12px;
  }
}

@media screen and (max-height: 750px) {
  .auth-main {
    padding: 24px;
    justify-content: flex-start;
  }
}

@keyframes showImg {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes moveFade {
  from {
    opacity: 1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);
  }

  to {
    opacity: 1;
    top: 0px;
    left: 48px;
    transform: translate(0, 0) scale(0.3);
  }
}

@keyframes hideLogo {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@media (max-width: 428px){
  .auth-shell{
    animation: bgChangeMobile 2s;
  }
  .logoAnimation{
    background-image: url(../../../../public/assets/img/Capa\ 2.png);
  }
}

@keyframes bgChangeMobile {
  0% {
    background-color: #2a3647;
  }
  100% {
    background-color: #2a3647;
  }
}

